# nvidia-gb10-webadmin

./: README.md  cli.sh  pyproject.toml  requirements.txt
cli/: __init__.py  main.py
config/: settings.example.yaml
core/: __init__.py  config.py  docker_helper.py  env_doctor.py  model_audit.py  model_scanner.py  param_advisor.py  process_manager.py  searxng_client.py
deploy/: README.md  bootstrap.sh  searxng-compose.yml  searxng-settings.yml  vllm-patch.Dockerfile
docs/: API清单.md  Task_Tracking.md  上下文交接.md  技术方案.md  推荐开源大模型.md  操作手册.md  测试checklist.md  研发方案.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: Sparkline.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  models.ts  overview.ts  ws.ts
frontend/src/types/: api.ts
frontend/src/views/: ApiDebugView.vue  ComponentLogsView.vue  EmbeddingModelView.vue  GeneralModelView.vue  LoginView.vue  ObservabilityView.vue  OverviewView.vue  (+2 more)
tools/: gguf_merge_shards.py  make_release.sh  release.sh
web/: __init__.py  anthropic_compat.py  auth.py  background_tasks.py  main.py  model_cache.py  schemas.py  state.py  ws_hub.py  ws_router.py
web/routers/: api_directory_router.py  auth_router.py  components_router.py  debug_router.py  env_router.py  gateway_router.py  logs_router.py  metrics_router.py  models_router.py  overview_router.py  perf_router.py  runtime_stats_router.py  searxng_router.py  settings_router.py
